[package]
name = "socksns"
version = "0.3.2"
license = "MIT"
authors = ["Steven Engler"]
edition = "2021"
repository = "https://github.com/stevenengler/socksns"
description = "A tool for running an application in an isolated network namespace, with external network access only through a SOCKS proxy."
keywords = ["socks", "proxy", "tor", "namespace", "isolation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
nix = "0.25.0"
libc = "0.2.137"
passfd = "0.1.4"
clap = { version = "4.0.18", features = ["derive", "wrap_help"] }
tokio = { version = "1.24.1", features = ["net", "rt", "io-util", "macros", "sync"] }
anyhow = "1.0.66"
